  - "shiny.tag" objects are now supported as inputs to
    playwidget(), so that rglwidget() values can be 
    wrapped in htmltools::div() to set their style.
  - Fixed bug in scene initialization that sometimes caused it
    to ignore initial control values.
  - Added figWidth() and figHeight() functions for sizing
    rgl plots in R Markdown documents.
    
0.98.12
  - Record context (ioslides, shiny, etc.) in scene 
    when rglwidget() is called.
  - Allow more than 16 scenes in html_document, ioslides_presentation and
    slidy_presentation.
  - useSubscene3d() now returns the id of the previously active subscene,
    to make temporary changes more convenient.
  - The rendering order is changed:  now all opaque objects are drawn first,
    then all transparent objects.  Previously this ordering was only done
    within subscenes, leading to rendering errors when transparent objects
    in one subscene were drawn before opaque objects in another.
  - renderRglwidget() and renderPlaywidget() now have an optional argument
    outputArgs for use in dynamic R Markdown documents.
  - rglwidget() now warns if an object has too many vertices
  - transparent spheres sometimes showed rendering
    artifacts because they were not drawn from back to front.  (Reported by Atte Tenkanen; original fix improved so nested
    spheres should now work.  WebGL display could still be
    improved.)
  - par3dinterp() did not always choose the best direction for interpolation
    of the userMatrix.
  - added an approximation to "polar" mouse controls to WebGL display.
  - the "centers" attribute now refers to the individual facets
    of spheres, rather than the whole sphere.  Use "vertices" for
    that.
  - The togglewidget() function didn't work properly in Shiny.
  - Tried to give a more helpful startup error message on MacOS.
  - Added documentation to rglwidgetClass in Javascript.
  - vertexSetter() can now set plane parameters.
  